[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/item/physical_item.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 15.5 )

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ItemFrame:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ItemFrame:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}

[node name="PhysicalItem" type="RigidBody2D"]
z_index = 3
collision_layer = 16
collision_mask = 3
mass = 4.27041
gravity_scale = 2.48
angular_damp = 0.0
script = ExtResource( 1 )

[node name="ItemFrame" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="PickUpArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="Collision" type="CollisionShape2D" parent="PickUpArea"]
position = Vector2( 0, -1.5 )
shape = SubResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/idle = SubResource( 4 )

[connection signal="ready" from="." to="." method="_on_PhysicalItem_ready"]
[connection signal="body_entered" from="PickUpArea" to="." method="_on_PickUpArea_body_entered"]
[connection signal="body_exited" from="PickUpArea" to="." method="_on_PickUpArea_body_exited"]
